# shining-emulator

./: .gitignore  Cargo.toml  run-android.sh
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/emulator/: Cargo.toml
crates/emulator/src/: cpu.rs  input.rs  lib.rs  rom.rs  sgb.rs
crates/emulator/src/cpu/: mod.rs
crates/emulator/src/emulator/: mod.rs
crates/emulator/src/external_ram/: mod.rs  sram.rs
crates/emulator/src/filter/: mod.rs
crates/emulator/src/gpu/: mod.rs
crates/emulator/src/gpu/filter/: README.md  mod.rs  xbr_params.rs
crates/emulator/src/mem/: mem_bus.rs  mod.rs
crates/emulator/src/rom/: mod.rs  tests.rs
crates/emulator/src/sgb/: mod.rs  tests.rs
crates/files/src/: lib.rs
crates/mobile/: Cargo.toml
crates/mobile/src/: lib.rs
src/: main.rs
src/emulator/: audio.rs  cpu.rs  gpu.rs  mem.rs  mod.rs  rom.rs  sgb.rs
src/emulator/audio/: mod.rs
src/emulator/external_ram/: mod.rs  sram.rs
src/emulator/gpu/: mod.rs
src/emulator/mem/: mem_bus.rs
src/files/: mod.rs
